objects/License_Snapshot_Sold_To_End_User__c.object
<CustomObject>
    <fields>
        <fullName>End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>License Snapshot Sold To End User</relationshipLabel>
        <relationshipName>License_Snapshot_Sold_To_End_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Processed_Date__c</fullName>
        <label>Last Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Merge_From__c</fullName>
        <label>Merge_From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regenerate_Snapshot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regenerate Snapshot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snapshot_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Snapshot Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snapshot_Reason__c</fullName>
        <label>Snapshot Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_End_User__c</fullName>
        <externalId>true</externalId>
        <label>Sold To + End User</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>License Snapshot Sold To End User (Account)</relationshipLabel>
        <relationshipName>License_Snapshot_Sold_To_End_User1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>License Snapshot Sold To End User</label>
    <nameField>
        <displayFormat>ST-EU-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Snapshot Sold To End User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>